--- a/Tool/MinervasoftSyncApp.csproj
+++ b/Tool/MinervasoftSyncApp.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Common\Properties\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Common\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
